--- a/package.json
+++ b/package.json
@@ -17,21 +17,28 @@
   },
   "homepage": "https://github.com/yzajchenko/jsFinalProject#readme",
   "devDependencies": {
-    "style-loader": "2.0.0",
-    "css-loader": "5.1.0",
     "@babel/core": "7.13.1",
+    "@babel/plugin-transform-runtime": "^7.13.8",
     "@babel/preset-env": "7.13.5",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
-    "webpack-merge": "5.7.3",
+    "css-loader": "5.1.0",
+    "eslint": "5.9.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1",
     "html-webpack-plugin": "3.2.0",
+    "style-loader": "2.0.0",
     "webpack": "4.46.0",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2",
-    "eslint": "5.9.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
-    "eslint-plugin-import": "2.14.0"
+    "webpack-merge": "5.7.3"
+  },
+  "dependencies": {
+    "@googlemaps/js-api-loader": "^1.11.1",
+    "detect.js": "^2.2.3",
+    "ua-parser-js": "^0.7.24",
+    "useragent-parser-js": "^1.0.3"
   }
 }
