--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --config webpack.config.prod.js",
-    "lint": "eslint .",
+    "lint:es": "eslint .",
+    "lint:scss": "sass-lint --verbose --no-exit",
     "dev": "webpack serve  --open --config webpack.config.dev.js"
   },
   "repository": {
@@ -23,6 +24,10 @@
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.1.0",
+    "cssnano": "^4.1.10",
+    "sass-lint": "1.12.1",
+    "node-sass": "4.13.0",
+    "sass-loader": "10.1.1",
     "eslint": "5.9.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "2.14.0",
@@ -38,6 +43,7 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.11.1",
     "detect.js": "^2.2.3",
+    "node-static": "^0.7.11",
     "ua-parser-js": "^0.7.24",
     "useragent-parser-js": "^1.0.3"
   }
